<resources>
    <string name="app_name">TCGvault</string>

    <!-- Login/Register -->
    <string name="error_enter_credentials">Please enter a username and password.</string>
    <string name="error_username_short">Username must be at least 3 characters.</string>
    <string name="error_password_short">Password must be at least 6 characters.</string>

    <string name="register_success">Account created. You can log in now.</string>
    <string name="register_failed">Registration failed. Username may already exist.</string>

    <string name="login_user_not_found">No account found for that username.</string>
    <string name="login_incorrect_password">Incorrect password.</string>

    <!-- Account -->
    <string name="logged_in_as">Logged in as: %1$s</string>
    <string name="logged_in_as_unknown">Logged in.</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>

    <string name="error_password_rules">Password must be at least 8 characters and include at least 1 letter and 1 number.</string>

    <string name="vault_title">Your Vault</string>
    <string name="vault_instructions">Type a full or partial card name to search (wildcards supported).</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="add_sample_cards">Add Sample Cards</string>
    <string name="no_results">No cards found. Try a different search.</string>

    <string name="vault">Vault</string>

    <string name="account">Account</string>
    <string name="pokemon">Pokémon</string>
    <string name="yugioh">Yu-Gi-Oh!</string>
    <string name="magic">Magic: The Gathering</string>



</resources>